Update execution counts and enhance logging for CSV processing in Spark

--- a/attemp1.ipynb
+++ b/attemp1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "b9550702",
    "metadata": {},
    "outputs": [],
@@ -13,27 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "fc784194",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "25/04/11 09:19:36 WARN Utils: Your hostname, debian-shed resolves to a loopback address: 127.0.1.1; using 192.168.1.11 instead (on interface enp3s0)\n",
-      "25/04/11 09:19:36 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/04/11 09:19:37 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
       "Processing file: allergies.csv\n",
+      "\n",
+      "Processing file: encounters.csv\n",
       "\n",
       "Processing file: encounters.csv\n"
      ]
@@ -50,22 +41,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Processing file: medications.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing file: medications.csv\n",
       "\n",
       "Processing file: patients.csv\n",
+      "\n",
+      "Processing file: patients.csv\n",
+      "\n",
+      "Processing file: procedures.csv\n",
       "\n",
       "Processing file: procedures.csv\n"
      ]
@@ -117,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "77f47d77",
    "metadata": {},
    "outputs": [
@@ -155,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "c10012af",
    "metadata": {},
    "outputs": [
@@ -178,59 +160,57 @@
     }
    ],
    "source": [
-    "patient_df = spark_dfs['patients'].filter((spark_dfs['patients'].BIRTHDATE.isNotNull()) \n",
-    "    # &\n",
-    "    # (\n",
-    "    #     Func.to_timestamp(spark_dfs['patients'].DEATHDATE, \"yyyy-MM-dd HH:mm:ss\") < Func.current_timestamp()\n",
-    "    # )      \n",
-    "    # &\n",
-    "    # (\n",
-    "    #     Func.floor(\n",
-    "    #         Func.datediff(\n",
-    "    #             Func.current_date(),\n",
-    "    #             Func.to_date(spark_dfs['patients'].BIRTHDATE, \"yyyy-MM-dd HH:mm:ss\")) / 365\n",
-    "    #     ).between(18, 35)\n",
-    "    # )\n",
-    ").show(5)"
+    "patient_df = spark_dfs['patients'].filter(\n",
+    "    (spark_dfs['patients'].BIRTHDATE.isNotNull()) &\n",
+    "    (spark_dfs['patients'].DEATHDATE == \"NA\")\n",
+    ")\n",
+    "\n",
+    "patient_df.show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c2b7b8f6",
+   "execution_count": 16,
+   "id": "58bd6837",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+----------+----------+-----------+---------+----------+------+---------+--------------+------+---------+-------+-----+-----------+------+--------------------+--------------------+---------------+------------+-----+\n",
-      "|                  Id| BIRTHDATE| DEATHDATE|        SSN|  DRIVERS|  PASSPORT|PREFIX|    FIRST|          LAST|SUFFIX|   MAIDEN|MARITAL| RACE|  ETHNICITY|GENDER|          BIRTHPLACE|             ADDRESS|           CITY|       STATE|  ZIP|\n",
-      "+--------------------+----------+----------+-----------+---------+----------+------+---------+--------------+------+---------+-------+-----+-----------+------+--------------------+--------------------+---------------+------------+-----+\n",
-      "|65d1a989-1aa6-4a1...|1943-12-05|2006-12-08|999-28-7609|S99918683| X5025977X|  Mrs.|Nelida367|  Considine820|    NA|Hammes673|      M|white|    italian|     F|Bethel  Pennsylva...|328 Collier Cross...|North Middleton|Pennsylvania|   NA|\n",
-      "|502d81dc-3946-48f...|1955-04-05|1996-07-02|999-77-5989|S99948691|X87849470X|   Mr.| Simon598|Schamberger479|    NA|       NA|      S|black|west_indian|     M|Antrim  Pennsylva...|1047 Hauck Traffi...|   Philadelphia|Pennsylvania|19102|\n",
-      "|f678f381-80fc-45d...|1950-11-01|2015-05-26|999-31-8293|S99997102|X39463533X|   Mr.|Lindsey52|      White193|    NA|       NA|      M|white|      irish|     M|Lower Saucon  Pen...|623 Thompson Terrace|     Harrisburg|Pennsylvania|17101|\n",
-      "|62759858-d635-4b3...|1955-04-05|2012-10-29|999-63-9979|S99969676|X73703367X|   Mr.|Austin578|   Rodriguez71|    NA|       NA|      M|black|west_indian|     M|Branch  Pennsylva...|     1022 Stamm Burg|   Philadelphia|Pennsylvania|19102|\n",
-      "|722270fe-f8dd-46e...|1955-04-05|2016-04-21|999-69-9611|S99972918|X24314578X|   Mr.| Grady603|       Smith67|    NA|       NA|      M|black|west_indian|     M|Philadelphia  Pen...|794 Skiles Divide...|   Philadelphia|Pennsylvania|19102|\n",
-      "+--------------------+----------+----------+-----------+---------+----------+------+---------+--------------+------+---------+-------+-----+-----------+------+--------------------+--------------------+---------------+------------+-----+\n",
+      "+--------------------+----------+---------+-----------+---------+----------+------+----------+----------+------+---------+-------+-----+---------+------+--------------------+--------------------+-----------+------------+-----+--------------------+-------------------+-------------------+--------------------+--------------------+--------------+--------+--------------------+------+----------+-----------------+---+\n",
+      "|                  Id| BIRTHDATE|DEATHDATE|        SSN|  DRIVERS|  PASSPORT|PREFIX|     FIRST|      LAST|SUFFIX|   MAIDEN|MARITAL| RACE|ETHNICITY|GENDER|          BIRTHPLACE|             ADDRESS|       CITY|       STATE|  ZIP|                  Id|              START|               STOP|             PATIENT|            PROVIDER|ENCOUNTERCLASS|    CODE|         DESCRIPTION|  COST|REASONCODE|REASONDESCRIPTION|age|\n",
+      "+--------------------+----------+---------+-----------+---------+----------+------+----------+----------+------+---------+-------+-----+---------+------+--------------------+--------------------+-----------+------------+-----+--------------------+-------------------+-------------------+--------------------+--------------------+--------------+--------+--------------------+------+----------+-----------------+---+\n",
+      "|708b81c9-21a9-411...|1986-10-28|       NA|999-94-1691|S99972093|X59078215X|  Mrs.|Angelic427|Kreiger457|    NA|Willms744|      M|white|   french|     F|Adams  Pennsylvan...|463 Mitchell Trac...|East Goshen|Pennsylvania|   NA|22874b3d-0873-40e...|2012-02-18 21:50:51|2012-02-28 21:12:17|708b81c9-21a9-411...|fb37c581-84a6-351...|     emergency|50849002|Emergency Room Ad...|105.37|  55680006|    Drug overdose| 25|\n",
+      "|708b81c9-21a9-411...|1986-10-28|       NA|999-94-1691|S99972093|X59078215X|  Mrs.|Angelic427|Kreiger457|    NA|Willms744|      M|white|   french|     F|Adams  Pennsylvan...|463 Mitchell Trac...|East Goshen|Pennsylvania|   NA|134c5ee3-1b72-4e3...|2013-08-03 21:50:51|2013-08-13 07:44:52|708b81c9-21a9-411...|fb37c581-84a6-351...|     emergency|50849002|Emergency Room Ad...|105.37|  55680006|    Drug overdose| 26|\n",
+      "|708b81c9-21a9-411...|1986-10-28|       NA|999-94-1691|S99972093|X59078215X|  Mrs.|Angelic427|Kreiger457|    NA|Willms744|      M|white|   french|     F|Adams  Pennsylvan...|463 Mitchell Trac...|East Goshen|Pennsylvania|   NA|6125f147-72d4-48a...|2014-12-08 21:50:51|2014-12-17 12:25:27|708b81c9-21a9-411...|fb37c581-84a6-351...|     emergency|50849002|Emergency Room Ad...|105.37|  55680006|    Drug overdose| 28|\n",
+      "|708b81c9-21a9-411...|1986-10-28|       NA|999-94-1691|S99972093|X59078215X|  Mrs.|Angelic427|Kreiger457|    NA|Willms744|      M|white|   french|     F|Adams  Pennsylvan...|463 Mitchell Trac...|East Goshen|Pennsylvania|   NA|f837dcf8-af7d-43b...|2015-08-31 21:50:51|2015-09-08 12:04:08|708b81c9-21a9-411...|fb37c581-84a6-351...|     emergency|50849002|Emergency Room Ad...|105.37|  55680006|    Drug overdose| 28|\n",
+      "|65b093e4-b353-447...|1995-12-03|       NA|999-62-1432|S99919770|X27983730X|   Mr.| Rudolf736|Zboncak558|    NA|       NA|     NA|white|    irish|     M|Lower Heidelberg ...|826 Hegmann Grove...|    Reading|Pennsylvania|19601|010594a6-a6ff-487...|2018-12-10 00:59:35|2018-12-20 22:57:39|65b093e4-b353-447...|01246f59-4963-3c9...|     emergency|50849002|Emergency Room Ad...|105.37|  55680006|    Drug overdose| 23|\n",
+      "+--------------------+----------+---------+-----------+---------+----------+------+----------+----------+------+---------+-------+-----+---------+------+--------------------+--------------------+-----------+------------+-----+--------------------+-------------------+-------------------+--------------------+--------------------+--------------+--------+--------------------+------+----------+-----------------+---+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Assign the 'patients' DataFrame from spark_dfs to patient_df\n",
-    "patient_df = spark_dfs['patients']\n",
+    "# Join patient_df and enc_df on patient_df.Id == enc_df.PATIENT\n",
+    "joined_df = patient_df.join(enc_df, patient_df[\"Id\"] == enc_df[\"PATIENT\"], \"inner\")\n",
     "\n",
-    "# Filter the DataFrame where DEATHDATE is 'NA'\n",
-    "patient_df.filter(\n",
-    "    Func.lit('NA') != patient_df.DEATHDATE\n",
-    ").show(5)"
+    "# Calculate the patient's age at the time of the encounter\n",
+    "joined_df = joined_df.withColumn(\n",
+    "    \"age\",\n",
+    "    Func.floor(Func.datediff(Func.col(\"START\").cast(\"date\"), Func.col(\"BIRTHDATE\")) / 365)\n",
+    ")\n",
+    "\n",
+    "# Filter the records where age is between 18 and 35\n",
+    "filtered_df = joined_df.filter((Func.col(\"age\") >= 18) & (Func.col(\"age\") <= 35))\n",
+    "\n",
+    "filtered_df.show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "28f20e2f",
    "metadata": {},
    "outputs": [
