Update .gitignore and refactor Jupyter Notebook: Add dataset paths to .gitignore, reset execution counts, and enhance logging outputs for better debugging.

--- a/attemp1.ipynb
+++ b/attemp1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "b9550702",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "fc784194",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/04/11 17:49:02 WARN Utils: Your hostname, debian-shed resolves to a loopback address: 127.0.1.1; using 192.168.1.11 instead (on interface enp3s0)\n",
+      "25/04/11 17:49:02 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/04/11 17:49:03 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -36,9 +47,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing file: medications.csv\n",
+      "Processing file: medications.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Processing file: patients.csv\n",
       "Processing file: procedures.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -73,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "77f47d77",
    "metadata": {},
    "outputs": [
@@ -108,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "c10012af",
    "metadata": {},
    "outputs": [
@@ -140,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "58bd6837",
    "metadata": {},
    "outputs": [
@@ -196,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "c3eab1fb",
    "metadata": {},
    "outputs": [
@@ -236,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "af99f136",
    "metadata": {},
    "outputs": [
@@ -268,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "04efbf8b",
    "metadata": {},
    "outputs": [
@@ -283,15 +314,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+----------+------------------------------------+------------------------------------+-------+------------------------------------------------------------+------+---------+---------+----------+---------------------------+------------------------------------+------------------------------------+----------+----------+------------------------------------+-------------------+-------------------+------------+------------------+------------------+\n",
-      "|med_START |med_STOP  |med_PATIENT                         |ENCOUNTER                           |CODE   |DESCRIPTION                                                 |COST  |DISPENSES|TOTALCOST|REASONCODE|REASONDESCRIPTION          |pat_Id                              |enc_Id                              |BIRTHDATE |DEATHDATE |enc_PATIENT_id                      |enc_START          |enc_STOP           |AGE_AT_VISIT|DEATH_AT_VISIT_IND|COUNT_CURRENT_MEDS|\n",
-      "+----------+----------+------------------------------------+------------------------------------+-------+------------------------------------------------------------+------+---------+---------+----------+---------------------------+------------------------------------+------------------------------------+----------+----------+------------------------------------+-------------------+-------------------+------------+------------------+------------------+\n",
-      "|2011-03-02|2011-04-06|21f0495c-0b03-47ed-b676-57d9f314bc06|79078661-e99b-4f38-8157-970f854b609e|1310197|Acetaminophen 300 MG / HYDROcodone Bitartrate 5 MG [Vicodin]|30.41 |1        |30.41    |NA        |NA                         |21f0495c-0b03-47ed-b676-57d9f314bc06|c9f164ad-9dc2-4f2d-83ff-29c14100416d|1981-12-06|NA        |21f0495c-0b03-47ed-b676-57d9f314bc06|2006-03-30 21:40:45|2006-04-09 00:10:49|24          |0                 |1                 |\n",
-      "|2019-03-18|NA        |713deac0-1417-4078-bd21-8ab9e79c9b83|6e88f323-a95d-445d-9dc2-fc8dae46defe|1856546|Kyleena 19.5 MG Intrauterine System                         |862.96|3        |2588.88  |NA        |NA                         |713deac0-1417-4078-bd21-8ab9e79c9b83|2fb7ce8f-3400-4c2e-b4dc-bc01b1e81777|1985-05-28|NA        |713deac0-1417-4078-bd21-8ab9e79c9b83|2012-09-11 04:59:03|2012-09-17 22:02:17|27          |0                 |2                 |\n",
-      "|2019-03-18|NA        |713deac0-1417-4078-bd21-8ab9e79c9b83|6e88f323-a95d-445d-9dc2-fc8dae46defe|1856546|Kyleena 19.5 MG Intrauterine System                         |862.96|3        |2588.88  |NA        |NA                         |713deac0-1417-4078-bd21-8ab9e79c9b83|e9731dac-0947-40e7-b93d-265121fe85d7|1985-05-28|NA        |713deac0-1417-4078-bd21-8ab9e79c9b83|2014-01-27 04:59:03|2014-02-02 05:37:15|28          |0                 |2                 |\n",
-      "|2011-05-14|2011-05-28|124bb400-58b3-4352-acaa-f79c84397795|6582cf77-7929-4b34-97ff-88b7cd11f49c|313782 |Acetaminophen 325 MG Oral Tablet                            |7.18  |1        |7.18     |10509002  |Acute bronchitis (disorder)|124bb400-58b3-4352-acaa-f79c84397795|b48c6a2c-5ad0-45e7-803f-1778c80a1fb5|1973-06-17|2000-03-16|124bb400-58b3-4352-acaa-f79c84397795|2000-03-11 14:50:32|2000-03-16 19:08:02|26          |1                 |1                 |\n",
-      "|2007-07-31|2007-08-14|6c9c6081-a12f-4e60-bcc3-1cbc591c13bf|8bbb515f-6ce3-4078-988d-0f54f43898ce|1310197|Acetaminophen 300 MG / HYDROcodone Bitartrate 5 MG [Vicodin]|197.95|1        |197.95   |NA        |NA                         |6c9c6081-a12f-4e60-bcc3-1cbc591c13bf|1486e9ba-7edb-433f-8828-c4a6f3ef52bb|1986-01-14|2012-04-21|6c9c6081-a12f-4e60-bcc3-1cbc591c13bf|2005-07-29 21:19:54|2005-08-09 20:18:37|19          |0                 |1                 |\n",
-      "+----------+----------+------------------------------------+------------------------------------+-------+------------------------------------------------------------+------+---------+---------+----------+---------------------------+------------------------------------+------------------------------------+----------+----------+------------------------------------+-------------------+-------------------+------------+------------------+------------------+\n",
+      "+----------+----------+------------------------------------+------------------------------------+-------+------------------------------------------------------------+------+---------+---------+----------+-----------------+------------------------------------+------------------------------------+----------+----------+------------------------------------+-------------------+-------------------+------------+------------------+------------------+\n",
+      "|med_START |med_STOP  |med_PATIENT                         |ENCOUNTER                           |CODE   |DESCRIPTION                                                 |COST  |DISPENSES|TOTALCOST|REASONCODE|REASONDESCRIPTION|pat_Id                              |enc_Id                              |BIRTHDATE |DEATHDATE |enc_PATIENT_id                      |enc_START          |enc_STOP           |AGE_AT_VISIT|DEATH_AT_VISIT_IND|COUNT_CURRENT_MEDS|\n",
+      "+----------+----------+------------------------------------+------------------------------------+-------+------------------------------------------------------------+------+---------+---------+----------+-----------------+------------------------------------+------------------------------------+----------+----------+------------------------------------+-------------------+-------------------+------------+------------------+------------------+\n",
+      "|2011-03-02|2011-04-06|21f0495c-0b03-47ed-b676-57d9f314bc06|79078661-e99b-4f38-8157-970f854b609e|1310197|Acetaminophen 300 MG / HYDROcodone Bitartrate 5 MG [Vicodin]|30.41 |1        |30.41    |NA        |NA               |21f0495c-0b03-47ed-b676-57d9f314bc06|c9f164ad-9dc2-4f2d-83ff-29c14100416d|1981-12-06|NA        |21f0495c-0b03-47ed-b676-57d9f314bc06|2006-03-30 21:40:45|2006-04-09 00:10:49|24          |0                 |1                 |\n",
+      "|2019-04-07|NA        |12cb2389-4bb3-4cc5-a124-0ce7f5d27e00|3714e5bb-c4a8-4c02-bf83-673c3f5dde4d|316672 |Simvistatin 10 MG                                           |214.96|12       |2579.52  |55822004  |Hyperlipidemia   |12cb2389-4bb3-4cc5-a124-0ce7f5d27e00|a245437a-78c7-4c62-86c6-887b699fe915|1966-07-23|NA        |12cb2389-4bb3-4cc5-a124-0ce7f5d27e00|2002-01-04 04:44:58|2002-01-11 20:50:39|35          |0                 |1                 |\n",
+      "|2018-01-11|2019-01-06|5fa3711b-4012-4c34-aaf8-0097d0785418|68988987-ad1e-40c3-8c7d-5fb7e099480b|831533 |Errin 28 Day Pack                                           |26.57 |12       |318.84   |NA        |NA               |5fa3711b-4012-4c34-aaf8-0097d0785418|eef21ec6-4938-4a57-a782-ba5b38efabe2|1985-04-19|2013-10-20|5fa3711b-4012-4c34-aaf8-0097d0785418|2013-10-14 00:45:01|2013-10-20 01:59:20|28          |1                 |1                 |\n",
+      "|2010-02-21|2011-02-16|abb2ffbf-b2a8-44c6-86a4-7ba0f0034ccd|dd750928-7180-4c8d-a5c9-e3aaf7eb3699|389221 |Etonogestrel 68 MG Drug Implant                             |377.15|12       |4525.8   |NA        |NA               |abb2ffbf-b2a8-44c6-86a4-7ba0f0034ccd|8e329c1b-62c0-45dc-94aa-6a43958861d4|1969-07-05|2017-04-14|abb2ffbf-b2a8-44c6-86a4-7ba0f0034ccd|2004-04-23 05:55:37|2004-05-05 10:43:16|34          |0                 |1                 |\n",
+      "|2015-01-27|2015-02-10|dacea80b-75dd-42d6-a5c0-be369c3e4ebf|c3c43259-21c7-4bbc-accc-011c50a0ef77|310965 |Ibuprofen 200 MG Oral Tablet                                |5.76  |1        |5.76     |NA        |NA               |dacea80b-75dd-42d6-a5c0-be369c3e4ebf|1deb51e9-ef0b-4013-b46f-f8efcd836842|1979-12-11|2009-08-24|dacea80b-75dd-42d6-a5c0-be369c3e4ebf|2009-08-20 01:30:34|2009-08-24 21:37:59|29          |1                 |2                 |\n",
+      "+----------+----------+------------------------------------+------------------------------------+-------+------------------------------------------------------------+------+---------+---------+----------+-----------------+------------------------------------+------------------------------------+----------+----------+------------------------------------+-------------------+-------------------+------------+------------------+------------------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -339,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "97cf0988",
    "metadata": {},
    "outputs": [
@@ -424,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "7cd8f45d",
    "metadata": {},
    "outputs": [
@@ -462,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "b074fdec",
    "metadata": {},
    "outputs": [
@@ -503,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "128ec403",
    "metadata": {},
    "outputs": [
@@ -511,6 +542,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "25/04/11 17:49:37 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
       "                                                                                \r"
      ]
     },
@@ -565,8 +597,8 @@
       "|med_START |med_STOP  |med_PATIENT                         |ENCOUNTER                           |CODE   |DESCRIPTION                                                                                                      |COST  |DISPENSES|TOTALCOST|REASONCODE|REASONDESCRIPTION          |pat_Id                              |enc_Id                              |BIRTHDATE |DEATHDATE |enc_PATIENT_id                      |enc_START          |enc_STOP           |AGE_AT_VISIT|DEATH_AT_VISIT_IND|COUNT_CURRENT_MEDS|CURRENT_OPIOID_IND|FIRST_READMISSION_DATE|diff_days|READMISSION_90_DAY_IND|READMISSION_30_DAY_IND|\n",
       "+----------+----------+------------------------------------+------------------------------------+-------+-----------------------------------------------------------------------------------------------------------------+------+---------+---------+----------+---------------------------+------------------------------------+------------------------------------+----------+----------+------------------------------------+-------------------+-------------------+------------+------------------+------------------+------------------+----------------------+---------+----------------------+----------------------+\n",
       "|2012-04-29|2012-05-13|04aefd77-78d8-4590-a7fb-92b9a49df0f1|56bee2c3-70a2-4c41-892c-e321ae6a7633|1043400|Acetaminophen 21.7 MG/ML / Dextromethorphan Hydrobromide 1 MG/ML / doxylamine succinate 0.417 MG/ML Oral Solution|7.57  |1        |7.57     |10509002  |Acute bronchitis (disorder)|04aefd77-78d8-4590-a7fb-92b9a49df0f1|0ec793ed-8f41-4cf8-a759-0b5283f504a6|1980-08-05|2013-09-17|04aefd77-78d8-4590-a7fb-92b9a49df0f1|2006-02-11 20:07:38|2006-02-21 23:17:25|25          |0                 |2                 |0                 |N/A                   |0        |0                     |0                     |\n",
-      "|2016-07-20|2016-08-10|04aefd77-78d8-4590-a7fb-92b9a49df0f1|61930df2-3874-41e7-9d4b-d208808e9a18|106258 |Hydrocortisone 10 MG/ML Topical Cream                                                                            |4.75  |1        |4.75     |24079001  |Atopic dermatitis          |04aefd77-78d8-4590-a7fb-92b9a49df0f1|0ec793ed-8f41-4cf8-a759-0b5283f504a6|1980-08-05|2013-09-17|04aefd77-78d8-4590-a7fb-92b9a49df0f1|2006-02-11 20:07:38|2006-02-21 23:17:25|25          |0                 |8                 |0                 |N/A                   |0        |0                     |0                     |\n",
       "|2016-07-20|2016-08-10|04aefd77-78d8-4590-a7fb-92b9a49df0f1|61930df2-3874-41e7-9d4b-d208808e9a18|835900 |cycloSPORINE 50 MG Oral Capsule                                                                                  |311.51|1        |311.51   |24079001  |Atopic dermatitis          |04aefd77-78d8-4590-a7fb-92b9a49df0f1|0ec793ed-8f41-4cf8-a759-0b5283f504a6|1980-08-05|2013-09-17|04aefd77-78d8-4590-a7fb-92b9a49df0f1|2006-02-11 20:07:38|2006-02-21 23:17:25|25          |0                 |8                 |0                 |N/A                   |0        |0                     |0                     |\n",
+      "|2016-07-20|2016-08-10|04aefd77-78d8-4590-a7fb-92b9a49df0f1|61930df2-3874-41e7-9d4b-d208808e9a18|106258 |Hydrocortisone 10 MG/ML Topical Cream                                                                            |4.75  |1        |4.75     |24079001  |Atopic dermatitis          |04aefd77-78d8-4590-a7fb-92b9a49df0f1|0ec793ed-8f41-4cf8-a759-0b5283f504a6|1980-08-05|2013-09-17|04aefd77-78d8-4590-a7fb-92b9a49df0f1|2006-02-11 20:07:38|2006-02-21 23:17:25|25          |0                 |8                 |0                 |N/A                   |0        |0                     |0                     |\n",
       "|2010-10-03|2010-10-10|04aefd77-78d8-4590-a7fb-92b9a49df0f1|7bfd94d3-eb72-4c28-bcf5-52df649ac136|562251 |Amoxicillin 250 MG / Clavulanate 125 MG Oral Tablet                                                              |63.53 |1        |63.53    |444814009 |Viral sinusitis (disorder) |04aefd77-78d8-4590-a7fb-92b9a49df0f1|0ec793ed-8f41-4cf8-a759-0b5283f504a6|1980-08-05|2013-09-17|04aefd77-78d8-4590-a7fb-92b9a49df0f1|2006-02-11 20:07:38|2006-02-21 23:17:25|25          |0                 |2                 |0                 |N/A                   |1250     |0                     |0                     |\n",
       "|2012-04-29|2012-05-13|04aefd77-78d8-4590-a7fb-92b9a49df0f1|56bee2c3-70a2-4c41-892c-e321ae6a7633|1043400|Acetaminophen 21.7 MG/ML / Dextromethorphan Hydrobromide 1 MG/ML / doxylamine succinate 0.417 MG/ML Oral Solution|7.57  |1        |7.57     |10509002  |Acute bronchitis (disorder)|04aefd77-78d8-4590-a7fb-92b9a49df0f1|5fe7c493-9eb6-4663-9a2f-2d795277be83|1980-08-05|2013-09-17|04aefd77-78d8-4590-a7fb-92b9a49df0f1|2009-07-15 20:07:38|2009-07-25 04:32:45|28          |0                 |2                 |0                 |N/A                   |0        |0                     |0                     |\n",
       "+----------+----------+------------------------------------+------------------------------------+-------+-----------------------------------------------------------------------------------------------------------------+------+---------+---------+----------+---------------------------+------------------------------------+------------------------------------+----------+----------+------------------------------------+-------------------+-------------------+------------+------------------+------------------+------------------+----------------------+---------+----------------------+----------------------+\n",
@@ -619,10 +651,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "1d5a1450",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -664,6 +703,14 @@
     "df_with_indicator.filter(F.col(\"diff_days\").between(1, 89)).show(5, truncate=False)\n",
     "df_with_indicator.filter(F.col(\"READMISSION_30_DAY_IND\") == 1).show(5, truncate=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d343467",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
