Fix execution count and comment out test code for debugging purposes

--- a/attemp1.ipynb
+++ b/attemp1.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7cd8f45d",
    "metadata": {},
    "outputs": [
@@ -371,11 +371,12 @@
     }
    ],
    "source": [
+    "# use for debuigging and testing purposes\n",
     "# Filter records where DEATH_AT_VISIT_IND = 1\n",
-    "test_cohort_df = cohort_df.filter(Func.col(\"CURRENT_OPIOID_IND\") == 1)\n",
+    "# test_cohort_df = cohort_df.filter(Func.col(\"CURRENT_OPIOID_IND\") == 1)\n",
     "\n",
-    "# Show the filtered records\n",
-    "test_cohort_df.show(5, truncate=False)"
+    "# # Show the filtered records\n",
+    "# test_cohort_df.show(5, truncate=False)"
    ]
   },
   {
