Refactor unit tests and update execution counts in Jupyter notebooks
- Updated execution counts in attemp1.ipynb to reflect the correct order of execution.
- Modified log messages in attemp1.ipynb to reflect the correct timestamps.
- Added new unit_tests.ipynb with comprehensive tests for filtering criteria, readmission indicators, and opioid indicators.
- Ensured that the new unit tests utilize PySpark for DataFrame operations and assertions.

--- a/attemp1.ipynb
+++ b/attemp1.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fc784194",
    "metadata": {},
    "outputs": [
@@ -35,14 +35,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/04/11 18:36:58 WARN Utils: Your hostname, debian-shed resolves to a loopback address: 127.0.1.1; using 192.168.1.11 instead (on interface enp3s0)\n",
-      "25/04/11 18:36:58 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/04/11 18:55:19 WARN Utils: Your hostname, debian-shed resolves to a loopback address: 127.0.1.1; using 192.168.1.11 instead (on interface enp3s0)\n",
+      "25/04/11 18:55:19 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/04/11 18:36:59 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "25/04/11 18:36:59 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/04/11 18:55:19 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -50,7 +47,6 @@
      "output_type": "stream",
      "text": [
       "Processing file: allergies.csv\n",
-      "Processing file: encounters.csv\n",
       "Processing file: encounters.csv\n"
      ]
     },
@@ -65,22 +61,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing file: medications.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing file: medications.csv\n",
       "Processing file: patients.csv\n",
-      "Processing file: procedures.csv\n",
       "Processing file: procedures.csv\n"
      ]
     },
@@ -128,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "77f47d77",
    "metadata": {},
    "outputs": [],
@@ -146,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c10012af",
    "metadata": {},
    "outputs": [],
@@ -161,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "58bd6837",
    "metadata": {},
    "outputs": [],
@@ -201,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c3eab1fb",
    "metadata": {},
    "outputs": [],
@@ -228,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "af99f136",
    "metadata": {},
    "outputs": [],
@@ -244,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "04efbf8b",
    "metadata": {},
    "outputs": [],
@@ -295,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "97cf0988",
    "metadata": {},
    "outputs": [
@@ -355,41 +337,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7cd8f45d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 29:===========================================>              (3 + 1) / 4]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------+----------+------------------------------------+------------------------------------+------+--------------------+------+---------+---------+----------+-----------------+------------------------------------+------------------------------------+----------+----------+------------------------------------+-------------------+-------------------+------------+------------------+------------------+------------------+\n",
-      "|med_START |med_STOP  |med_PATIENT                         |ENCOUNTER                           |CODE  |DESCRIPTION         |COST  |DISPENSES|TOTALCOST|REASONCODE|REASONDESCRIPTION|pat_Id                              |enc_Id                              |BIRTHDATE |DEATHDATE |enc_PATIENT_id                      |enc_START          |enc_STOP           |AGE_AT_VISIT|DEATH_AT_VISIT_IND|COUNT_CURRENT_MEDS|CURRENT_OPIOID_IND|\n",
-      "+----------+----------+------------------------------------+------------------------------------+------+--------------------+------+---------+---------+----------+-----------------+------------------------------------+------------------------------------+----------+----------+------------------------------------+-------------------+-------------------+------------+------------------+------------------+------------------+\n",
-      "|2011-03-10|2011-04-09|ebe51a1a-1447-4bb5-a638-ac0163db989b|21f7138b-2d47-48a9-b243-c29c0e229c2d|429503|Fentanyl 100 MCG    |214.96|1        |214.96   |59621000  |Pain Relief      |ebe51a1a-1447-4bb5-a638-ac0163db989b|bbe83c18-5874-425f-928f-77cc7d0c74c6|1992-08-06|NA        |ebe51a1a-1447-4bb5-a638-ac0163db989b|2010-12-16 08:23:35|2010-12-28 07:27:19|18          |0                 |1                 |1                 |\n",
-      "|2010-07-07|NA        |0ea047ce-faa7-4320-be2f-672a93fc9cfb|59114970-f6e0-4a21-b0e7-232b1a1e1518|316049|Hydromorphone 325 MG|214.96|109      |23430.64 |59621000  |Pain Relief      |0ea047ce-faa7-4320-be2f-672a93fc9cfb|f384861a-7926-4cf3-9f06-8b2b28836371|1991-07-17|2011-06-06|0ea047ce-faa7-4320-be2f-672a93fc9cfb|2009-12-07 20:01:53|2009-12-16 13:51:53|18          |0                 |1                 |1                 |\n",
-      "|2010-01-18|NA        |dbfec58c-64a9-4fe0-b095-64b03af7fd67|8a6011fa-9c60-4661-aa3b-32066e5b76c3|316049|Hydromorphone 325 MG|214.96|115      |24720.4  |59621000  |Pain Relief      |dbfec58c-64a9-4fe0-b095-64b03af7fd67|5664eb64-9ce1-4bdf-9706-469cc4bf2d67|1978-11-06|2001-02-24|dbfec58c-64a9-4fe0-b095-64b03af7fd67|2001-02-18 23:17:27|2001-02-24 18:53:41|22          |1                 |1                 |1                 |\n",
-      "|2018-07-12|2018-08-11|3b3b7748-a006-466d-9788-b3d6e922ffc4|a6c595a6-a125-4c60-a813-c6dbb92c7f14|429503|Fentanyl 100 MCG    |214.96|1        |214.96   |59621000  |Pain Relief      |3b3b7748-a006-466d-9788-b3d6e922ffc4|b9a23377-8962-4da1-b6fc-bbf8581f895e|1976-11-25|2010-02-17|3b3b7748-a006-466d-9788-b3d6e922ffc4|2002-09-19 03:17:53|2002-09-27 00:48:54|25          |0                 |2                 |1                 |\n",
-      "|2018-07-12|2018-08-11|3b3b7748-a006-466d-9788-b3d6e922ffc4|a6c595a6-a125-4c60-a813-c6dbb92c7f14|429503|Fentanyl 100 MCG    |214.96|1        |214.96   |59621000  |Pain Relief      |3b3b7748-a006-466d-9788-b3d6e922ffc4|9fcf2e25-4c60-45c6-a10a-55ef1415569d|1976-11-25|2010-02-17|3b3b7748-a006-466d-9788-b3d6e922ffc4|2010-02-08 03:17:53|2010-02-17 02:46:40|33          |1                 |2                 |1                 |\n",
-      "+----------+----------+------------------------------------+------------------------------------+------+--------------------+------+---------+---------+----------+-----------------+------------------------------------+------------------------------------+----------+----------+------------------------------------+-------------------+-------------------+------------+------------------+------------------+------------------+\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use for debuigging and testing purposes\n",
     "# Filter records where DEATH_AT_VISIT_IND = 1\n",
@@ -401,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "128ec403",
    "metadata": {},
    "outputs": [],
@@ -464,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "1d5a1450",
    "metadata": {},
    "outputs": [],
@@ -476,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "2d343467",
    "metadata": {},
    "outputs": [
